objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>NamingConventionFinalised__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Admin only</inlineHelpText>
        <label>NamingConventionFinalised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Opportunities_For_Account__c</fullName>
        <formula>Account.Number_Of_Opportunities_For_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Number of Opportunities recorded against Account</inlineHelpText>
        <label>No Opportunities For Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_PF_Leaders__c</fullName>
        <inlineHelpText>This field is required to determine what codes fee splits and other expenses receive. Please let us know how many facilitators there are for this Job.</inlineHelpText>
        <label>Number of PF Leaders</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Facilitator_position</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Num_PF_Leaders_comm__c</fullName>
        <formula>IF(
AND(ISBLANK(TEXT(Num_PF_Leaders__c)), ISBLANK(Parent_Opportunity__c) = False),
TEXT(Parent_Opportunity__r.Num_PF_Leaders__c),
TEXT(Num_PF_Leaders__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num PF Leaders, for commission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_additional_PAX_post_first_invoice__c</fullName>
        <description>This field was used to match qty of products to num pax once an invoice had been created. Any products created after that first invoice would be matched to this number, not the total number. This function has been requested to be turned off for now.</description>
        <formula>IF(OR(ISBLANK(Number_of_Participants_at_first_invoice__c),Number_of_Participants_at_first_invoice__c=0),0,Number_of_Participants__c - Number_of_Participants_at_first_invoice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(paused)Num additional PAX post 1st inv.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_PAX_to_match_to_Qty__c</fullName>
        <formula>IF(
First_invoice_created__c,
Num_additional_PAX_post_first_invoice__c,
IF(Number_of_Participants__c&gt;0,Number_of_Participants__c,Estimated_no_of_participants__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(paused) Num of PAX to match to Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Facilitators_on_commission__c</fullName>
        <label>Number of Facilitators on commission</label>
        <summaryFilterItems>
            <field>Opportunity_Role__c.Facilitator_position__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Role__c.perc_comm_serv_fac__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Participants__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Informational only. This field is calculated based on the number of PAX that exist against the Job related to this Opportunity.</inlineHelpText>
        <label>Actual no. of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Participants_at_first_invoice__c</fullName>
        <description>This field was used to match qty of products to num pax once an invoice had been created. Any products created after that first invoice would be matched to total pax minus this number, not the total number. This function has been requested to be turned off for now.</description>
        <label>(paused) Actual num PAX at first invoice</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_child_OC_PAX__c</fullName>
        <description>Number of closed / won OC PAX for this OC Course</description>
        <label>Number of child OC PAX</label>
        <summaryFilterItems>
            <field>Opportunity_Joiner__c.Is_PAX_Stage_Closed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Joiner__c.Is_Closed_Lost__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Joiner__c.Opportunity_Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_open_child_OC_PAX__c</fullName>
        <inlineHelpText>This field tells you how many child OC PAX remain in a non-closed state e.g. Prospecting. If you check the checkbox above this field and save this opportunity this number of child OC PAX will be closed. Be sure that is what you want.</inlineHelpText>
        <label>Num of child OC PAX that will be closed</label>
        <summaryFilterItems>
            <field>Opportunity_Joiner__c.Is_PAX_Stage_Closed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Joiner__c.Is_PAX_Stage_Closed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Joiner__c.Opportunity_Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OPE_count__c</fullName>
        <inlineHelpText>Used for flows</inlineHelpText>
        <label>OPE count</label>
        <summaryForeignKey>Opportunity_Product_Extension__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ORR_Sync_current_OR__c</fullName>
        <label>ORR Sync current OR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Course_Child__c</fullName>
        <description>Hidden field to calculate for Commissions</description>
        <formula>Sell_1_Pec__c  +  Spot_1_Pec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Course Child %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Open_course_program_name__c</fullName>
        <label>Open course program name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiation Fundamentals</fullName>
                    <label>Negotiation &amp; Influencing Fundamentals</label>
                </value>
                <value>
                    <fullName>Professional Negotiation - Level 1</fullName>
                    <label>Professional Negotiation &amp; Influencing (Module 1)</label>
                </value>
                <value>
                    <fullName>Strategic Negotiation - Level 2</fullName>
                    <label>Strategic Negotiation &amp; Influencing (Module 2)</label>
                </value>
                <value>
                    <fullName>Expert Negotiation - Level 3</fullName>
                    <label>Expert Negotiation &amp; Influencing (Module 3)</label>
                </value>
                <value>
                    <fullName>Refresher</fullName>
                    <label>Negotiation &amp; Influencing Refresher</label>
                </value>
                <value>
                    <fullName>Verhandlungsführung mit System: Grenzen explorieren, Neues ausprobieren</fullName>
                </value>
                <value>
                    <fullName>Concessions &amp; Deadlocks</fullName>
                    <isActive>false</isActive>
                    <label>Concessions &amp; Deadlocks</label>
                </value>
                <value>
                    <fullName>Negotiation Preparation</fullName>
                    <isActive>false</isActive>
                    <label>Negotiation Preparation</label>
                </value>
                <value>
                    <fullName>Negotiation Tactics</fullName>
                    <isActive>false</isActive>
                    <label>Negotiation Tactics</label>
                </value>
                <value>
                    <fullName>Stakeholder Engagement</fullName>
                    <isActive>false</isActive>
                    <label>Stakeholder Engagement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OppProd_count__c</fullName>
        <description>Count of Opportunity Products</description>
        <label>OppProd count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Type__c</field>
            <operation>notEqual</operation>
            <value>Deducted Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OppProd_count_comparator__c</fullName>
        <description>Used to notice differences in OppProd</description>
        <label>OppProd count, comparator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppProd_total_Qty__c</fullName>
        <label>OppProd total Qty</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OppProd_total_Qty_comparator__c</fullName>
        <label>OppProd total Qty, comparator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Products_requires_resync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This captures the fact that the product syncing flows need to run again once they&apos;ve finished as a change has been made in the meantime which will require their efforts once more.</description>
        <label>Opportunity Products requires resync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Products_resync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the checkbox that actually fires the resync of the OPs.</description>
        <label>Opportunity Products, resync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Products_roll_up_sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Products, roll-up sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Products_sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to tell the Opportunity Products sync flow to run</description>
        <label>Opportunity Products, sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Products_sync_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opportunity Products, sync count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Role_Records_syncing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Role Records syncing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Roles_count__c</fullName>
        <label>Opportunity Roles, count</label>
        <summaryForeignKey>Opportunity_Role__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Roles_count_comparator__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opportunity Roles, count, comparator</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Roles_person_count__c</fullName>
        <label>Opportunity Roles person, count</label>
        <summaryFilterItems>
            <field>Opportunity_Role__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Roles_sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admin only, causes the Roles and Opp to sync</description>
        <label>Opportunity Roles, sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Roles_syncing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Roles syncing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Types__c</fullName>
        <label>Opportunity Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Opportunity_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Admin only</inlineHelpText>
        <label>Opportunity from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_record_type_from_Lead__c</fullName>
        <label>Opportunity record type, from Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_sub_types__c</fullName>
        <label>Opportunity sub-types</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Opportunity_Types__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incompany</fullName>
                </value>
                <value>
                    <fullName>CDP-F</fullName>
                </value>
                <value>
                    <fullName>CDP-C</fullName>
                </value>
                <value>
                    <fullName>CDP-V</fullName>
                </value>
                <value>
                    <fullName>WLD training (i.e. training staff to be trainers)</fullName>
                </value>
                <value>
                    <fullName>Training run by WLD trainers (Managed by ENSI)</fullName>
                </value>
                <value>
                    <fullName>Training run by WLD trainers (Managed by the customer)</fullName>
                </value>
                <value>
                    <fullName>Training run by ENSI Facilitator and WLD trainer</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Retainer</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Level 1</fullName>
                    <label>Module 1</label>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                    <label>Module 2</label>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                    <label>Module 3</label>
                </value>
                <value>
                    <fullName>Refresher</fullName>
                </value>
                <value>
                    <fullName>German open course</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Verhandlungsführung mit System: Grenzen explorieren, Neues ausprobieren</fullName>
                </value>
                <value>
                    <fullName>ENSI 4 Frens</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_sub_types_comparator__c</fullName>
        <label>Opportunity sub-types comparator</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_types_comparator__c</fullName>
        <label>Opportunity types comparator</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAX__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PAX</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>OC PAX</relationshipLabel>
        <relationshipName>OC_PAX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAX_payment_received_on__c</fullName>
        <inlineHelpText>The date we received payment from PAX. This also acts as the indicator that we have received payment.</inlineHelpText>
        <label>PAX payment received on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFQ_Survey_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PFQ Survey included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the parent opportunity that this Open Course Registrations relates to</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Child Opportunities</relationshipLabel>
        <relationshipName>Parent_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Special__c</fullName>
        <description>Used for Calculations of commissions (Not for Users)</description>
        <formula>IF( Parent_Opportunity__r.RecordType.DeveloperName = &quot;Open_Course_Special&quot;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Calculations of commissions (Not for Users)</inlineHelpText>
        <label>Parent = Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_competitors__c</fullName>
        <inlineHelpText>If there are competitors for this Opportunity enter their names here.</inlineHelpText>
        <label>Potential competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_city__c</fullName>
        <inlineHelpText>The city where the client would prefer this training to be held.</inlineHelpText>
        <label>Preferred city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_country__c</fullName>
        <inlineHelpText>The country where the client would prefer this training to be held.</inlineHelpText>
        <label>Preferred country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Listing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_co_facilitator_value_serv_AUD__c</fullName>
        <formula>Primary_co_facilitator_value_services__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary co facilitator value serv AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_co_facilitator_value_services__c</fullName>
        <label>Primary co-facilitator value services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Products_copied_from_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is ticked it means products have already been copied. It&apos;s a one hit wonder!</inlineHelpText>
        <label>Products copied from Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_sync_status__c</fullName>
        <inlineHelpText>This field will let you know the status of the sync for Products, Roles, and Role Records. Look for the ‘All done’ status to be confident totals on the Opportunity are correct.</inlineHelpText>
        <label>Products sync status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sync_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profit_Before_Commissions_AUD__c</fullName>
        <formula>Profit_Before_Commissions__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Before Commissions AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit_Before_Commissions__c</fullName>
        <description>Ref to Commented Formula</description>
        <formula>Gross_Revenue__c - ( Facilitator_Fees__c + Commissions_from_PAX__c + Referrals_From_Pax__c +  Expenses_NOT_recoverable__c + Total_Materials_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Before Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_duration__c</fullName>
        <label>Program duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one-day</fullName>
                </value>
                <value>
                    <fullName>two-day</fullName>
                </value>
                <value>
                    <fullName>three-day</fullName>
                </value>
                <value>
                    <fullName>four-day</fullName>
                </value>
                <value>
                    <fullName>five-day</fullName>
                </value>
                <value>
                    <fullName>1.5 day</fullName>
                </value>
                <value>
                    <fullName>2.5 day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_name__c</fullName>
        <label>Program name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <inlineHelpText>Enter the code if a promo (discount) code was used for the open course registration</inlineHelpText>
        <label>Promo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Amount_AUD__c</fullName>
        <formula>Proposed_Amount__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Amount AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Amount__c</fullName>
        <inlineHelpText>The amount defined for this Opportunity in the proposal.</inlineHelpText>
        <label>Proposed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_end_date__c</fullName>
        <inlineHelpText>When is this Opportunity / job likely to end?</inlineHelpText>
        <label>(deprecated) Proposed end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_start_date__c</fullName>
        <inlineHelpText>When is this Opportunity / job likely to start</inlineHelpText>
        <label>(deprecated) Proposed start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_vs_Gross_AUD__c</fullName>
        <formula>Proposed_vs_Gross__c/Currency_exchange_rate__c</formula>
        <label>Proposed vs Gross AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_vs_Gross__c</fullName>
        <formula>Proposed_Amount__c - Gross_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount should equal 0.
If the value is positive, you have NOT added enough Products
If the value is negative, you have added too many Products
Similar to the Difference to allocation field of the old system.</inlineHelpText>
        <label>Proposed vs Gross (diff. in allocation)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_order_number__c</fullName>
        <label>Purchase order number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_assurance_conducted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality assurance conducted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RAIT_Survey_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RAIT Survey included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT_Product_Group_Business__c</fullName>
        <inlineHelpText>List of RT product group / businesses for reporting requirements</inlineHelpText>
        <label>RT Product Group / Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copper</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Diamonds &amp; Minerals</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Exploration</fullName>
                </value>
                <value>
                    <fullName>GBS</fullName>
                </value>
                <value>
                    <fullName>Iron Ore</fullName>
                </value>
                <value>
                    <fullName>RTAlcan</fullName>
                </value>
                <value>
                    <fullName>Technology &amp; Innovation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT_Program_Type__c</fullName>
        <inlineHelpText>Identifies program type within contract</inlineHelpText>
        <label>RT Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overview</fullName>
                </value>
                <value>
                    <fullName>Introductory</fullName>
                </value>
                <value>
                    <fullName>Foundational</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT_Region__c</fullName>
        <inlineHelpText>List of RT regions for reporting requirements</inlineHelpText>
        <label>RT Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia / NZ</fullName>
                </value>
                <value>
                    <fullName>Asia / Middle East</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Europe / West Africa</fullName>
                </value>
                <value>
                    <fullName>Southern Africa</fullName>
                </value>
                <value>
                    <fullName>US / South America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_calculate_commissions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you would like the commissions to be recalculated</inlineHelpText>
        <label>(deprecated) Re-calculate commissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_To_Create_PAX_Job_record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on PAX record to identify that the process can run to create PAX Job record</description>
        <inlineHelpText>Used on PAX record to identify that the process can run to create PAX Job record</inlineHelpText>
        <label>Ready To Create PAX Job record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_Calculate_Commission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once this is checked the fee split and invoice flow will continually run to update the fee splits, invoices, and deducted fees.</description>
        <inlineHelpText>Please check this box if you think that, at least for now, all the products are correct and in place and you would like to start calculating fee splits and creating invoices (both receivable and payable).</inlineHelpText>
        <label>(dep) Ready for fee splits and invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recognised_as_percentage_of_Gross__c</fullName>
        <formula>IF(
Gross_Revenue__c &gt; 0,
Revenue_recognised__c / Gross_Revenue__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recognised, as percentage of Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Referrals_From_Pax1__c</fullName>
        <description>&quot;SUM of expense records of type referrer, of child opps.
Note: I&apos;ve now added referrer to expenses as well. This means we&apos;ll need an Account on an expenses record.
Note: as with Sell 1 %, Sell 1 $, etc we still need Referrer % and Referrer $ for the same reason i.e. estimates prior to actuals.&quot;</description>
        <label>(dep) Referrals From Pax1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referrals_From_Pax_AUD__c</fullName>
        <formula>Referrals_From_Pax__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of referrals from PAX AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referrals_From_Pax__c</fullName>
        <description>&quot;SUM of expense records of type referrer, of child opps.
Note: I&apos;ve now added referrer to expenses as well. This means we&apos;ll need an Account on an expenses record.
Note: as with Sell 1 %, Sell 1 $, etc we still need Referrer % and Referrer $ for the same reason i.e. estimates prior to actuals.&quot;</description>
        <label>Cost of referrals from PAX</label>
        <summarizedField>Opportunity_Joiner__c.Total_Referrer__c</summarizedField>
        <summaryForeignKey>Opportunity_Joiner__c.Opportunity_Parent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Referrer_Per__c</fullName>
        <description>Updated through process builder from Account record using lookup Referer</description>
        <inlineHelpText>Referer&apos;s % split. This amount is deducted from the Marketers fee split for Service and Materials</inlineHelpText>
        <label>Referrer %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Referrer_Type__c</fullName>
        <description>This is used for the creation of the expense record if additional options are added then Process needs to be updated and expense subtype and field dependencies</description>
        <label>Referrer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAANZ</fullName>
                </value>
                <value>
                    <fullName>Takeda</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>